market, result 기능 추가

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,10 +6,10 @@ services:
     env_file:
       - .env
     environment:
-      - POSTGRES_USER=$POSTGRES_USER
-      - POSTGRES_PASSWORD:$POSTGRES_PASSWORD
+      - POSTGRES_USER=$DB_USERNAME
+      - POSTGRES_PASSWORD:$DB_PASSWORD
     ports:
-      - '$POSTGRES_PORT:$POSTGRES_PORT_DOCKER'
+      - '$DB_PORT:$DB_PORT_DOCKER'
 
     volumes:
       - postgres_data:/var/lib/postgresql/data
