--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,13 +6,13 @@ services:
     env_file:
       - .env
     environment:
-      - POSTGRES_USER=$DB_USERNAME
-      - POSTGRES_PASSWORD:$DB_PASSWORD
+      - POSTGRES_USER=$POSTGRES_USER
+      - POSTGRES_PASSWORD:$POSTGRES_PASSWORD
     ports:
-      - '$DB_PORT:$DB_PORT_DOCKER'
+      - '$POSTGRES_PORT:$POSTGRES_PORT_DOCKER'
 
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
+    # volumes:
+    #   - postgres_data:/var/lib/postgresql/data
     networks:
       - db_network
 
